<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_student_record_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_student_name_txt_field_at_student_record_acitvity"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/ageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_student_age_txt_field_at_student_record_acitvity"
            android:inputType="number" />

        <EditText
            android:id="@+id/marksEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_student_marks_txt_field_at_student_record_acitvity"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_student_result_txt_field_at_student_record_acitvity"
            android:inputType="text" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/apply_and_show_list_button_at_student_record_activity" />


    </LinearLayout>

</LinearLayout>